--- a/css/style.css
+++ b/css/style.css
@@ -2,137 +2,119 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Roboto", Helvetica, sans-serif;
-  overflow: hidden;
-}
+  font-family: 'Roboto', Helvetica, sans-serif;
+  overflow: hidden; }
 
 .app {
   display: flex;
   flex-direction: column;
   width: 100vw;
   height: 100vh;
-  padding: 50px 0;
-  background: url("../img/bg.jpg") center/cover no-repeat;
-}
-.app .boards {
-  display: flex;
-  width: 100%;
-}
-.app .boards__item {
-  display: flex;
-  flex-direction: column;
-  align-self: baseline;
-  max-width: 250px;
-  width: 100%;
-  background-color: rgba(26, 25, 25, 0.5);
-  margin: 0 15px;
-  padding: 10px;
-  transition: 0.3s all ease;
-  border-radius: 3px;
-  position: relative;
-}
-.app .boards__item .title {
-  padding: 5px;
-  color: #fff;
-}
-.app .boards__item .title:focus {
-  outline: 1px solid rgba(168, 168, 168, 0.45);
-}
-.app .boards__item .list {
-  min-height: 40px;
-}
-.app .boards__item .list__item {
-  background-color: #fefefe;
-  border-radius: 3px;
-  padding: 10px;
-  text-align: center;
-  margin: 4px 0;
-  cursor: pointer;
-  font-size: 14px;
-  outline: none;
-  border: none;
-}
-.app .boards__item .form {
-  border-radius: 3px;
-  margin-top: auto;
-  display: none;
-}
-.app .boards__item .form .textarea {
-  resize: none;
-  height: 60px;
-  border-radius: 3px;
-  border: none;
-  background: white;
-  padding: 10px;
-  width: 100%;
-}
-.app .boards__item .form .textarea:focus {
-  outline: none;
-}
-.app .boards__item .form .buttons {
-  display: flex;
-}
-.app .boards__item .form .buttons .add__item-btn {
-  background: #0d88da;
-  border: none;
-  height: 35px;
-  cursor: pointer;
-  color: #fff;
-  border-radius: 3px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-right: 10px;
-  width: 100%;
-}
-.app .boards__item .form .buttons .cancel__item-btn {
-  padding: 0 10px;
-  background: #a0110c;
-  border: none;
-  height: 35px;
-  cursor: pointer;
-  border-radius: 3px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color: #fff;
-  width: 75px;
-  margin-left: auto;
-  flex-shrink: 0;
-}
-.app .boards__item .add__btn {
-  height: 30px;
-  background: rgba(155, 155, 155, 0.3);
-  border-radius: 3px;
-  margin-top: 5px;
-  display: flex;
-  font-size: 12px;
-  align-items: center;
-  padding-left: 10px;
-  color: #fff;
-  cursor: pointer;
-}
-.app .boards__item .add__btn span {
-  font-size: 20px;
-  margin-right: 10px;
-  color: #fff;
-}
-.app .button {
-  height: 35px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: rgba(19, 80, 204, 0.62);
-  border: none;
-  width: 150px;
-  cursor: pointer;
-  position: absolute;
-  bottom: 50px;
-  left: 50%;
-  transform: translate(-50%);
-  color: white;
-  border-radius: 3px;
-  font-size: 14px;
-}
+  padding: 50px;
+  background: url("../img/bg.jpg") center/cover no-repeat; }
+  .app .boards {
+    display: flex;
+    width: 100%; }
+    .app .boards__item {
+      display: flex;
+      flex-direction: column;
+      align-self: baseline;
+      width: 250px;
+      background-color: rgba(26, 25, 25, 0.5);
+      margin: 0 15px;
+      padding: 10px;
+      transition: .3s all ease;
+      border-radius: 3px;
+      position: relative; }
+      .app .boards__item .title {
+        padding: 5px;
+        color: #fff; }
+        .app .boards__item .title:focus {
+          outline: 1px solid rgba(168, 168, 168, 0.45); }
+      .app .boards__item .list {
+        min-height: 40px; }
+        .app .boards__item .list__item {
+          background-color: #fefefe;
+          border-radius: 3px;
+          padding: 10px;
+          text-align: center;
+          margin: 4px 0;
+          cursor: pointer;
+          font-size: 14px;
+          outline: none;
+          border: none; }
+      .app .boards__item .form {
+        border-radius: 3px;
+        margin-top: auto;
+        display: none; }
+        .app .boards__item .form .textarea {
+          resize: none;
+          height: 60px;
+          border-radius: 3px;
+          border: none;
+          background: white;
+          padding: 10px;
+          width: 100%; }
+          .app .boards__item .form .textarea:focus {
+            outline: none; }
+        .app .boards__item .form .buttons {
+          display: flex; }
+          .app .boards__item .form .buttons .add__item-btn {
+            background: #0d88da;
+            border: none;
+            height: 35px;
+            cursor: pointer;
+            color: #fff;
+            border-radius: 3px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-right: 10px;
+            width: 100%; }
+          .app .boards__item .form .buttons .cancel__item-btn {
+            padding: 0 10px;
+            background: #a0110c;
+            border: none;
+            height: 35px;
+            cursor: pointer;
+            border-radius: 3px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            color: #fff;
+            width: 75px;
+            margin-left: auto;
+            flex-shrink: 0; }
+      .app .boards__item .add__btn {
+        height: 30px;
+        background: rgba(155, 155, 155, 0.3);
+        border-radius: 3px;
+        margin-top: 5px;
+        display: flex;
+        font-size: 12px;
+        align-items: center;
+        padding-left: 10px;
+        color: #fff;
+        cursor: pointer; }
+        .app .boards__item .add__btn span {
+          font-size: 20px;
+          margin-right: 10px;
+          color: #fff; }
+  .app .button {
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(19, 80, 204, 0.62);
+    border: none;
+    width: 150px;
+    cursor: pointer;
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    transform: translate(-50%);
+    color: white;
+    border-radius: 3px;
+    font-size: 14px; }
 
 /*# sourceMappingURL=style.css.map */
