--- a/css/style.scss
+++ b/css/style.scss
@@ -11,7 +11,7 @@
   flex-direction: column;
   width: 100vw;
   height: 100vh;
-  padding: 50px 0;
+  padding: 50px;
   background: url('../img/bg.jpg') center/cover no-repeat;
   .boards {
     display: flex;
@@ -20,8 +20,7 @@
       display: flex;
       flex-direction: column;
       align-self: baseline;
-      max-width: 250px;
-      width: 100%;
+      width: 250px;
       background-color: rgba(26, 25, 25, 0.5);
       margin: 0 15px;
       padding: 10px;
